--- a/ex30/estilo/style.css
+++ b/ex30/estilo/style.css
@@ -1,10 +1,19 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+:root{--fonte1:Verdana, Geneva, Tahoma, sans-serif;
+--fonte2: 'Passion One', cursive; } 
+
 *{margin: 0px;
-padding: 0px;}
+padding: 0px;
+}
 
 html,body{background-color: darkgray;
-min-height: 100vh;}
+min-height: 100vh;
+font-family: var(--fonte1);}
 
 header{background-color: black;
 color: white;
