--- a/ex30/estilo/style.css
+++ b/ex30/estilo/style.css
@@ -5,7 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
 :root{--fonte1:Verdana, Geneva, Tahoma, sans-serif;
---fonte2: 'Passion One', cursive; } 
+--fonte2: 'Passion One', cursive; 
+--fonte3:'Sriracha' ,cursive;} 
 
 *{margin: 0px;
 padding: 0px;
@@ -20,7 +21,9 @@ color: white;
 text-align: center;}
 
 header > h1 {padding-top: 50px;
-font-variant: small-caps;}
+font-variant: small-caps;
+font-family: var(--fonte2);
+font-size: 10vw;}
 
 header > p {padding-bottom: 50px;}
 
@@ -33,10 +36,13 @@ a:hover{text-decoration: underline;}
 section{padding-top: 10vh;
 padding-bottom: 10vh;
 line-height: 2em;
-padding-left: 30px;}
+padding-left: 30px;
+font-family: var(--fonte3);
+font-size: 3.5vw;}
 
 section.imagem > p {background-color: rgba(0, 0, 0, 0.253);
-width: 400px;}
+display: inline-block;
+padding: 5px;}
 
 section.normal{background-color: white;
 color: black;}
