--- a/ex30/estilo/style.css
+++ b/ex30/estilo/style.css
@@ -44,6 +44,14 @@ section.imagem > p {background-color: rgba(0, 0, 0, 0.253);
 display: inline-block;
 padding: 5px;}
 
+section#idimg01{
+background-image:url(../imagens/background001.jpg);
+}
+
+section#idimg02{
+    background-image: url(../imagens/background002.jpg);
+}
+
 section.normal{background-color: white;
 color: black;}
 
