--- a/ex30/estilo/style.css
+++ b/ex30/estilo/style.css
@@ -42,21 +42,28 @@ font-size: 3.5vw;}
 
 section.imagem > p {background-color: rgba(0, 0, 0, 0.253);
 display: inline-block;
-padding: 5px;}
+padding: 5px; 
+text-shadow: 2px 2px 0px black;}
 
-section#idimg01{
+
+section#img01{
 background-image:url(../imagens/background001.jpg);
+background-position: right,center;
+background-size: cover;
 }
 
-section#idimg02{
+section#img02{
     background-image: url(../imagens/background002.jpg);
+    background-size: cover;
 }
 
 section.normal{background-color: white;
 color: black;}
 
 section.imagem{background-color: rgb(51, 51, 51);
-color: white;}
+color: white; 
+box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.596);
+background-attachment: fixed;}
 
 footer{background-color: black;
 text-align: center;
