--- a/ex30/estilo/style.css
+++ b/ex30/estilo/style.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
 :root{--fonte1:Verdana, Geneva, Tahoma, sans-serif;
---fonte2: 'Passion One', cursive; 
+--fonte2:  'Passion One', cursive;
 --fonte3:'Sriracha' ,cursive;} 
 
 *{margin: 0px;
@@ -62,7 +62,7 @@ color: black;}
 
 section.imagem{background-color: rgb(51, 51, 51);
 color: white; 
-box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.596);
+box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.596);
 background-attachment: fixed;}
 
 footer{background-color: black;
