--- a/ex35/mq02/estilos/style.css
+++ b/ex35/mq02/estilos/style.css
@@ -6,7 +6,7 @@ padding: 0px;
 font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body { 
+html body { 
     width: 100vw;
     height: 100vh;
     background-color:  #66177e;
