--- a/ex35/mq003/estilo/style.css
+++ b/ex35/mq003/estilo/style.css
@@ -18,3 +18,17 @@ h1 {
     color: white;
     text-shadow: 2px 2px 0px blue;
 }
+
+@media screen and (orientation: portrait) {body {
+background: url(../imagens/cev-portrait.jpg);
+background-position:center bottom
+}
+    
+}
+ 
+@media screen and (orientation:landscape) {body{
+background: url(../imagens/cev-landscape.jpg);
+background-position: left bottom;
+}
+    
+}
